deployment/01-basic-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: deploy-examples
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: nginx:stable
          ports:
            - containerPort: 80
