deployment/02-configmap-env-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configmap-deployment
  namespace: deploy-examples
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cfg-app
  template:
    metadata:
      labels:
        app: cfg-app
    spec:
      containers:
        - name: app
          image: busybox:1.36
          command: ["sh", "-c", "echo $APP_MESSAGE; sleep 3600"]
