deployment/05-nfs-pv-pvc-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-deployment
  namespace: deploy-examples
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nfs-app
  template:
    metadata:
      labels:
        app: nfs-app
    spec:
      containers:
        - name: worker
          image: busybox:1.36
          command: ["sh", "-c", "echo 'writing to NFS' >> /mnt/nfs/out.txt; sleep 3600"]
          volumeMounts:
            - name: nfs-volume
              mountPath: /mnt/nfs
      volumes:
        - name: nfs-volume
          persistentVolumeClaim:
            claimName: nfs-claim
