deployment/09-node-affinity-tolerations-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-affinity-deployment
  namespace: deploy-examples
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/worker
                    operator: In
                    values:
                      - "true"
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "batch"
          effect: "NoSchedule"
      containers:
        - name: app
          image: nginx:stable
