deployment/10-resources-limits-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resources-deployment
  namespace: deploy-examples
spec:
  replicas: 2
  selector:
    matchLabels:
      app: res-app
  template:
    metadata:
      labels:
        app: res-app
    spec:
      containers:
        - name: cpu-mem-app
          image: nginx:stable
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
