deployment/12-hpa-pdb-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscale-app
  namespace: deploy-examples
spec:
  replicas: 2
  selector:
    matchLabels:
      app: autoscale
  template:
    metadata:
      labels:
        app: autoscale
    spec:
      containers:
        - name: app
          image: nginx:stable
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
